16Oct00=======================================================================
1. add a ':' after 'G7BRN de G1TLH' in a talk message.
2. added /J to the list of things to ignore (as in G1TLH/J) in prefix 
processing (ie /J mean Jota not /JA [Japan]).
3. change all INCOMING 00-08 0A-1F and 9B characters that make it past the
intermediate client->server protocol to '.'.
04Sep00=======================================================================
1. made PC10,11,12 badword checking dependant on a flag variable ($censorpc)
default = 0 (off).
02Sep00=======================================================================
1. fix a long standing talk bug to do with routing to specific nodes (t xxx >
yyy .....)
2. Add badwords checking in various places. You put a list of words into
/spider/data/badwords one or several per line. Lines starting with # are
ignored. PC10, PC11, PC12 with words contained in this file will not be
sent on. Also ann, talk and dx commands have badword checking added. Words
are NOT case sensitive, but you will need to put all the endings in (eg 
...k, ...ker, ...king).
3. Added new version of admin manual from G0VGS.
01Sep00=======================================================================
1. allow blank on field 4 of PC10 (even though it's "illegal").
28Aug00=======================================================================
1. changes DXChannel::get_all_ak1a to get_all_nodes.
2. ignore PC21s coming in on the interface with that callsign (ie nodes 
trying to disconnect themselves).
3. output correct PC29 on blank lines and escape ^ characters differently 
(and transparently for spider nodes).
26Aug00=======================================================================
1. make blank origins on messages the node call.
2. added new version of FAQ from Ian G0VGS
3. added a dummy PC75 command (WCY merge?)
4. Don't allow mail routing for clx nodes
5. Log isolates
25Aug00=======================================================================